# ropefun

./: CMakeLists.txt  fixednode.cpp  fixednode.h  helperfunctions.cpp  helperfunctions.h  inertialnode.cpp  inertialnode.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  osgwidget.cpp  osgwidget.h  rope.cpp  rope.h  ropecreate.cpp  ropecreate.h  ropecreate.ui  ropenode.cpp  ropenode.h  vector3.cpp  vector3.h  wavenode.cpp  wavenode.h
